Add machine-id volume
When starting a server Hytale needs access to the machine UUID to start properly

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
             - "5520:5520/udp"
         volumes:
             - ./hytale:/hytale
+            - /etc/machine-id:/etc/machine-id:ro
         env_file:
             - path: .env
               required: false
